--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,57 @@
-.the-quiz {
-    text-align: left;
+html,
+body {
+    background: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80") no-repeat center center fixed;
+    background-size: cover;
+    color: #FFB58C;
+    /* color: wheat; */
+}
+
+.wrapper {
+    margin-right: auto; /* 1 */
+    margin-left:  auto; /* 1 */
+  
+    max-width: 960px; /* 2 */
+  
+    padding-right: 10px; /* 3 */
+    padding-left:  10px; /* 3 */
+  }
+
+h1{
+    text-align: center;
+    margin-top: 100px;
+}
+
+#welcome-instructions{
+    text-align: center;
+}
+
+h4 {
+    color: #1EFFAB;
+    text-align: center;
+}
+
+.the-quiz{
+    background: inherit;
+    box-shadow: inset 0 0 3000px rgba(255, 255, 255, .5);
+}
+
+.quiz-content{
+    margin: auto 25px;
+    padding-top: 10px;
+    padding-bottom: 10px; 
+}
+
+h2,
+h3,
+#display {
+    text-align: center;
+}
+
+.game-result-content{
+    margin: 0 auto;
 }
 
 #bottom-button{
-    margin-bottom: 30px;
+    margin: 15px auto;
+    
 }
